<resources>
    <string name="app_name">AnhTu_coffee</string>
    <string name="loading">Loading...</string>
    <string name="welcome_back">Hi there, welcome back</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="remember_pass">Remember me</string>
    <string name="forget_pass">Forgot password?</string>
    <string name="login">Login</string>
    <string name="create_new_account">Please create a new Account to get started...!</string>
    <string name="login_fail">Login fail...!</string>
    <string name="ask_manager">Please contact your manager to use this function...!</string>
    <string name="dont_empty">Please fill all the blank!!!</string>
    <string name="new_user">New member? Register now...</string>
    <string name="add_employee">Add new employee</string>
    <string name="save">Save</string>
    <string name="welcome1">Welcome, </string>
    <string name="order">Order</string>
    <string name="order_list">Order list</string>
    <string name="payment">Payment</string>
    <string name="have_a_good_day">Have a good day...!</string>
    <string name="new_account">New account is: </string>
    <string name="default_pass">default password: </string>
    <string name="table_mgmt">Table mgmt</string>
    <string name="stock_mgmt">Stock mgmt</string>
    <string name="menu_mgmt">Menu mgmt</string>
    <string name="about">About</string>
    <string name="table">Table: </string>
    <string name="total">Total: </string>
    <string name="more_setting">Utilities</string>
    <string name="manager_only">This function is for management purposes only...!</string>
    <string name="add_table_menu">Please add some table and item first...!</string>
    <string name="done">Done</string>
    <string name="search">Search...</string>
    <string name="choose_table_first">Choose table first...</string>
    <string name="choose_item_first">Choose items first...</string>
    <string name="takeaway_info">Takeaway order information</string>
    <string name="order_success">Order Success...!</string>
    <string name="dont_use_symbol">Do not use symbol...!</string>
    <string name="cancel">Cancel</string>
    <string name="canceled">Canceled..!</string>
    <string name="customer_info">Customer information</string>
    <string name="skip">Skip</string>
    <string name="vnd">VND</string>
    <string name="floor"> / Floor </string>
    <string name="floor1">Floor</string>
    <string name="takeaway">Takeaway</string>
    <string name="phone">Phone number</string>
    <string name="success">Success...!</string>
    <string name="pay">Pay</string>
    <string name="don_hang"> order(s)</string>
    <string name="delete">Delete...!</string>
    <string name="del">Delete</string>
    <string name="xac_nhan_xoa">You want to delete?</string>
    <string name="agree">Agree</string>
    <string name="deleted">Deleted</string>
    <string name="failed">Failed...!</string>
    <string name="update_table">Update table</string>
    <string name="check_floor">Floor is invalid</string>
    <string name="duplicated">Duplicated..!</string>
    <string name="update_success">Update successful..!</string>
    <string name="add_success">Add successful..!</string>
    <string name="add_table">Add table</string>
    <string name="is_empty">Available</string>
    <string name="is_empty1">Available</string>
    <string name="is_not_empty">Unavailable</string>
    <string name="cart">Cart</string>
    <string name="bill_details">Bill Details</string>
    <string name="material">Material</string>
    <string name="amount">Amount</string>
    <string name="ncc">Supplier</string>
    <string name="don_vi_tinh">Unit</string>
    <string name="update_material">Update material</string>
    <string name="add_material">Add material</string>
    <string name="update">Update</string>
    <string name="item_name">Item name</string>
    <string name="price">Price</string>
    <string name="discount">Discount</string>
    <string name="note">Note</string>
    <string name="img_url">Image URL</string>
    <string name="update_item">Update item</string>
    <string name="add_item">Add item</string>
    <string name="copy_right">Copyrighted project</string>
    <string name="do_an">HaUI Graduation Project</string>
    <string name="ten_de_tai">Project name:</string>

    <string name="ten_de_tai1">Building an application to manage coffee shops</string>
    <string name="ten_de_tai2">on Android devices</string>
    <string name="ten_de_tai3">(Anh Tu coffee shop)</string>
    <string name="dev">Developer:</string>
    <string name="nat">NGUYEN ANH TU</string>
    <string name="student_code">Student code:</string>
    <string name="gv_huongdan">Instructor:</string>
    <string name="gv">Dr. PHAM VAN HA</string>
    <string name="fit">Faculty of Information Technology</string>
    <string name="haui">Hanoi University of Industry</string>
    <string name="ver">Version: 2.0.0</string>
    <string name="hn2021">Hanoi 2021</string>
    <string name="personal_info">Personal Infor.</string>
    <string name="employee_mgmt">Employees MGMT</string>
    <string name="sale_report">Sales report</string>
    <string name="customer_list">Customer list</string>
    <string name="logout">Logout</string>
    <string name="logout_confirm">You want to logout?</string>
    <string name="name">Full name</string>
    <string name="change_pass">Change password</string>
    <string name="old_pass">Password</string>
    <string name="new_pass">New password</string>
    <string name="renew_pass">Retype new password</string>
    <string name="wrong_pass">Incorrect password</string>
    <string name="manager">Manager</string>
    <string name="update_employee">Update Employee</string>
    <string name="customer">customer(s)</string>
    <string name="to">to</string>
    <string name="start_date">Start date</string>
    <string name="end_date">End date</string>
    <string name="report">Report</string>





</resources>