<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp"
    android:orientation="vertical">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/name"/>
    <EditText

        android:id="@+id/et_hoten_nv_add"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Họ tên" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/phone"/>
    <EditText
        android:maxLength="12"
        android:id="@+id/et_sdt_nv_add"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Số điện thoại"
        android:inputType="number" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/username"/>
    <EditText
        android:id="@+id/et_user_nv_add"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Tài khoản" />
    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/manager"
        android:buttonTint="#000"
        android:checked="false"
        android:id="@+id/cb_per_nv_add"/>

</LinearLayout>