<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp"
    android:theme="@style/Theme.AppCompat.Light.NoActionBar"
    android:orientation="vertical">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/customer_info"/>
    <EditText
        android:inputType=""
        android:id="@+id/et_info_customer_add"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/dont_use_symbol" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/phone"/>
    <EditText
        android:inputType="phone"
        android:id="@+id/et_sdt_customer_add"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/phone" />


</LinearLayout>