<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background_main"
        android:padding="20dp"
        android:theme="@style/Theme.AppCompat">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerInParent="true"
            android:orientation="vertical"
>

            <ImageView
android:layout_weight="2"
                android:id="@+id/logologin"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginBottom="20dp"
                android:src="@drawable/shop_icon"
                android:transitionName="logo_img" />

            <TextView
                android:layout_weight="0.2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/bungeevn"
                android:text="@string/welcome_back"
                android:textColor="#000"
                android:textSize="40sp"
                android:transitionName="logo_img1" />

            <LinearLayout
                android:theme="@style/Theme.MaterialComponents.Light.NoActionBar"
                android:layout_weight="4"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginTop="20dp"

                android:orientation="vertical">

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/username"
                    android:textColorHint="#222">

                    <EditText
                        android:singleLine="true"
                        android:id="@+id/etusername"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:maxLength="32"
                        android:textColor="#000" />


                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"

                    android:layout_height="wrap_content"
                    android:hint="@string/password"
                    android:textColorHint="#222"
                    app:passwordToggleEnabled="true"

                    app:passwordToggleTint="@color/black">

                    <EditText
                        android:singleLine="true"
                        android:id="@+id/etpassword"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:maxLength="32"
                        android:textColor="#000" />


                </com.google.android.material.textfield.TextInputLayout>

                <CheckBox
                    android:id="@+id/remember_pass"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:buttonTint="#000"
                    android:checked="true"
                    android:text="@string/remember_pass"
                    android:textColor="#000" />

                <Button
                    android:id="@+id/btn_forgetpass"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:layout_margin="5dp"
                    android:background="#00000000"
                    android:backgroundTint="#000"
                    android:elevation="0dp"
                    android:text="@string/forget_pass"
                    android:textAllCaps="false"
                    android:textColor="#000" />

                <Button
                    android:id="@+id/btn_login"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    android:background="@drawable/custombtn"
                    android:text="@string/login"

                    android:textColor="#fff" />

                <Button
                    android:id="@+id/btn_newuser"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="5dp"
                    android:background="#00000000"
                    android:elevation="0dp"
                    android:text="@string/new_user"
                    android:textAllCaps="false"
                    android:textColor="#000" />
            </LinearLayout>


        </LinearLayout>
    </RelativeLayout>


</layout>