<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/custom_bg_home"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="70dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_centerInParent="true"
                android:background="#c97e3a"
                android:fontFamily="@font/bungeevn"
                android:gravity="center"
                android:text="@string/sale_report"
                android:textColor="#000"
                android:textSize="28sp" />

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_margin="5dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/date_start"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:hint="@string/start_date"
                android:textColor="#000"
                android:textSize="22sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="to"
                android:textColor="#000"
                android:textSize="22sp" />

            <TextView
                android:id="@+id/date_end"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:hint="@string/end_date"
                android:textColor="#000"
                android:textSize="22sp" />
        </LinearLayout>

        <TextView
            android:id="@+id/btn_thongke"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/custom_add_table_btn"
            android:padding="10dp"
            android:text="@string/report"
            android:textColor="#000"
            android:textSize="28sp" />

        <ListView
            android:id="@+id/lv_hoadon"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="10dp"
            android:layout_weight="4"
            android:divider="@null"
            android:dividerHeight="5dp" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="10dp"
            android:layout_weight="0.5"
            android:orientation="horizontal">

            <TextView
                android:layout_width="200dp"
                android:layout_height="80dp"
                android:layout_centerVertical="true"
                android:gravity="center_vertical"
                android:text="@string/total"
                android:textColor="#000"
                android:textSize="30sp" />

            <TextView

                android:id="@+id/txt_tong_cart"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:gravity="center_vertical"
                android:text="0đ"
                android:textColor="@color/red"
                android:textSize="34sp" />
        </RelativeLayout>

    </LinearLayout>

</layout>